# seat-allocator-vue

./: .gitignore  BUILD.md  LICENSE  README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
cpp/: CMakeLists.txt  wasm-bridge.cpp
cpp/src/algorithms/: algorithm.cpp  algorithm.hpp  constraints.cpp  constraints.hpp
cpp/src/utils/: constants.hpp  dynamic_bitset.cpp  dynamic_bitset.hpp  utils.cpp  utils.hpp  utiltypes.hpp
src/: App.vue
src/assets/wasm/: alloc_algo.d.ts
src/components/common/: DropDownMenu.vue
src/components/controls/: PageNavigator.vue  ShuffleButton.vue
src/components/grid/: GridCell.vue  SeatGrid.vue
src/components/layout/: AppFooter.vue  AppHeader.vue
src/composables/: useColorConfig.ts  useConstraintsConfig.ts  useFileIO.ts  useGridShuffle.ts  useWasm.ts
src/utils/: Position.ts
